# lights

./: .gitignore  Cargo.toml  LICENSE  README.md  rebuild-and-run.sh  wait-and-launch-govee.sh
crates/govee-app/: Cargo.toml
crates/govee-app/src/: app.rs  config.rs  main.rs  scenes.rs  ui.rs  worker.rs
crates/govee-core/: Cargo.toml
crates/govee-core/src/: error.rs  http.rs  lan.rs  lib.rs  models.rs
