[package]
name = "govee-app"
version = "0.1.0"
edition = "2021"
description = "Govee lights controller — TUI frontend"

[[bin]]
name = "govee"
path = "src/main.rs"

[dependencies]
govee-core = { path = "../govee-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
