[package]
name = "govee-app"
version = "0.1.0"
edition = "2021"
description = "Govee lights controller — GUI frontend"

[[bin]]
name = "govee"
path = "src/main.rs"

[dependencies]
govee-core = { path = "../govee-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# eframe/egui: use glow (OpenGL) only — lighter build, works on Raspberry Pi
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"
serde_json = { workspace = true }
dirs = "5"
